--- a/dispatch/templates/dispatch/regularly.html
+++ b/dispatch/templates/dispatch/regularly.html
@@ -17,19 +17,52 @@
 
 {% block content %}
 
-<div class="regularly_layout">
+<div class="regularlyLayout">
+
+  <div class="sideLayout">
+
+    <div class="groupList">
+      <div class="groupListHead">
+        <span class="groupListTitle">그룹목록</span>
+      </div>
+      <div class="groupListBody">
+        <div>
+          
+        </div>
+        <div class="groupListItem">
+          <div class="groupOpen">1</div>
+          <div class="groupName">출퇴근</div>
+        </div>
+      </div>
+    </div>
+
+    <div></div>
+
+    <div></div>
+
+  </div>
+
+  <div class="mainLayout">
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
+
+</div>
+
+<!-- <div class="regularly_layout">
 
 
 
-  <!-- 스케줄 -->
+  스케줄
   <div class="schedule">
 
-    <!-- 스케줄-헤더 -->
+    스케줄-헤더
     <div class="scheduleHeaderArea">
       <div class="scheduleHeader"></div>
     </div>
 
-    <!-- 스케줄-바디 -->
+    스케줄-바디
     <div class="scheduleBodyArea">
       <div class="hourMarker">
         <div>0</div>
@@ -68,14 +101,14 @@
 
 
 
-    <!-- 검색창 -->
+    검색창
     <div class="search">
 
       <div class="searchTitle">그룹검색</div>
 
       <form action="" class="searchForm">
 
-        <!-- 변경영역 -->
+        변경영역
         <div class="search_inputArea">
           <label for="">그룹</label>
           <select name="group" id="">
@@ -112,7 +145,7 @@
 
 
 
-    <!-- 입력창 -->
+    입력창
     <form class="input">
       <table>
         <tr style="pointer-events: none;">
@@ -211,7 +244,7 @@
 
 
 
-    <!-- 노선목록 -->
+    노선목록
     <form class="list">
       <div class="listHeader">
         <span>그룹이름</span>
@@ -267,7 +300,7 @@
 
 
 
-</div>
+</div> -->
 {% endblock %}
 
 
