--- a/static/css/dispatch/regularlyRoute.css
+++ b/static/css/dispatch/regularlyRoute.css
@@ -1,10 +1,120 @@
-.group_layout {
+.routeLayout {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
+  height: 81rem;
+}
+
+
+
+
+
+
+
+
+.groupLayout {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
   width: 36rem;
   height: 100%;
 }
+
+/* 그룹목록 */
+.groupList {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: calc(100% - 16rem);
+  box-sizing: border-box;
+  background-color: white;
+  border-radius: 0.2rem;
+  box-shadow: 0.1rem 0.1rem 0.6rem rgba(0, 0, 0, 0.3);
+}
+
+.groupListHead {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 3.6rem;
+  padding: 0 1rem;
+  background-color: #444;
+  box-sizing: border-box;
+  border-radius: 0.2rem 0.2rem 0 0;
+}
+
+.groupListTitle {
+  font-size: 1.4rem;
+  color: white;
+}
+
+.groupListHead svg {
+  cursor: pointer;
+}
+
+.groupListBody {
+  width: 100%;
+  height: calc(100% - 3.6rem);
+  overflow-y: scroll;
+}
+
+.groupListBody::-webkit-scrollbar {
+  width: 0.6rem;
+}
+
+.groupListBody::-webkit-scrollbar-thumb {
+  height: 17%;
+  background-color: #444444;
+  border-radius: 1rem;
+}
+
+.groupListBody::-webkit-scrollbar-track {
+  background-color: #D2D2D2;
+}
+
+.groupListItem {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 3.6rem;
+}
+
+.groupNum {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 3.6rem;
+  height: 100%;
+  font-size: 1.4rem;
+  font-weight: 700;
+  box-sizing: border-box;
+  border-right: 0.1rem solid #CDCDCE;
+  border-bottom: 0.1rem solid #CDCDCE;
+}
+
+.groupName {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: calc(100% - 3.6rem);
+  height: 100%;
+  padding-left: 1rem;
+  box-sizing: border-box;
+  font-size: 1.4rem;
+  border-bottom: 0.1rem solid #CDCDCE;
+  cursor: pointer;
+}
+
+.groupListItem:hover .groupNum,
+.groupListItem:hover .groupName{
+  background-color: #CDCDCE;
+}
+
+
+
 
 
 
@@ -12,466 +122,374 @@
 
 
 /* 그룹등록 */
-.createGroup {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  width: 100%;
-  height: 9rem;
-  margin-top: 2.8rem;
-  background-color: white;
-  border-radius: 0.2rem;
-  box-shadow: 0.1rem 0.1rem 0.6rem rgba(0, 0, 0, 0.3);
-  box-sizing: border-box;
-}
 
-.createGroupHeadre {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  width: 100%;
-  height: 2.8rem;
-  padding-left: 2rem;
-  background-color: #444;
-  border-radius: 0.2rem 0.2rem 0 0;
-  font-size: 1.5rem;
-  color: white;
-  box-sizing: border-box;
-}
-
-.createGroupForm {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  height: 5.2rem;
-  padding: 0 1rem;
-  background-color: #E4E4E4;
-  box-sizing: border-box;
-}
-
-.createGroupForm input:nth-child(2),
-.createGroupForm input:nth-child(3) {
-  height: 2.5rem;
-  box-sizing: border-box;
-  outline: none;
-}
-
-.createGroupForm input:nth-child(2) {
-  width: 4.8rem;
-}
-
-.createGroupForm input:nth-child(3) {
-  width: 20rem;
-}
-
-.createGroupForm input:nth-child(4) {
-  background-color: #0069D9;
-}
-
-
-
-
-
-/* 그룹목록 */
-.groupList {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  background-color: white;
-  border-radius: 0.2rem;
-  box-shadow: 0.1rem 0.1rem 0.6rem rgba(0, 0, 0, 0.3);
-  box-sizing: border-box;
-}
-
-.groupListHeadre {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  width: 100%;
-  height: 2.8rem;
-  padding-left: 1.2rem;
-  background-color: #444;
-  border-radius: 0.2rem 0.2rem 0 0;
-  font-size: 1.5rem;
-  color: white;
-  box-sizing: border-box;
-}
-
-.groupListForm {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  width: 100%;
-  height: calc(100% - 8rem);
-  overflow-y: scroll;
-}
-
-/* 스크롤바 설정*/
-.groupListForm::-webkit-scrollbar {
-  width: 0.6rem;
-}
-
-.groupListForm::-webkit-scrollbar-thumb {
-  height: 17%;
-  background-color: #444444;
-  border-radius: 10px;
-}
-
-.groupListForm::-webkit-scrollbar-track {
-  background-color: #D2D2D2;
-}
-
-.groupListBox {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-end;
-  width: 100%;
-  height: auto;
-  padding-left: 0.1rem;
-  padding-right: 0.1rem;
-  box-sizing: border-box;
-}
-
-.groupListCell {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  height: 3rem;
-  border-top: 0.1rem solid black;
-}
-
-.groupListCellOpenArea {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 30rem;
-  height: 100%;
-  cursor: pointer;
-}
-
-.groupListOpenBtn {
-  display: flex;
-  align-items: center;
-  height: 100%;
-  margin: 0 1rem;
-}
-
-.groupNum{
-  display: none;
-  width: 4.2rem;
-  height: 2.5rem;
-  box-sizing: border-box;
-  outline: none;
-  border: 0.1rem solid black;
-  border-radius: 0.2rem;
-  background-color: white;
-}
-
-.groupName {
-  width: 24rem;
-  height: 2.5rem;
-  box-sizing: border-box;
-  outline: none;
-  border: none;
-  background-color: white;
-  cursor: pointer;
-}
-
-.groupListBtnBox {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 6.5rem;
-  margin: 0 1rem;
-}
-
-.groupListBtnBox div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 1.6rem;
-  height: 1.6rem;
-  background-color: white;
-  background-size: contain;
-  background-image: url("../../images/editIcon.png");
-  cursor: pointer;
-}
-
-.groupListBtnBox input:nth-child(2) {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 1.6rem;
-  height: 1.6rem;
-  padding: 0;
-  background-color: white;
-  background-repeat: no-repeat;
-  background-image: url("../../images/deleteIcon.png");
-  background-size: contain;
-  border: none;
-  outline: none;
-  cursor: pointer;
-}
-
-.groupListBtnBox input:nth-child(3) {
-  display: none;
-  background-color: #0069D9;
-}
-
-.routeListBox {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  /* align-items: flex-end; */
-  width: 90%;
-  height: 0;
-  font-size: 1.4rem;
-  overflow: hidden;
-}
-
-.routeListCell {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  width: 100%;
-  height: 3rem;
-  cursor: pointer;
-}
-
-.routeListNumber {
-  margin: 0 1rem 0 0.4rem;
-}
-
-
-
-
-
-
-/* 입력창 */
-.input {
-  flex-direction: column;
-  justify-content: flex-start;
-  height: 16.2rem;
-}
-
-.inputHeader {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  height: 4.2rem;
-}
-
-.inputHeader span {
-  font-size: 1.6rem;
-  margin-left: 0.8rem;
-}
-
-.inputBtnBox {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 23rem;
-  height: 100%;
-}
-
-.inputNew {
-  background-color: #0069D9;
-}
-
-.inputSave {
-  background-color: #0069D9;
-}
-
-.inputDelete {
-  background-color: #444;
-}
-
-.input table tr:nth-child(1) td {
-  border-top: 0.1rem solid black;
-}
-
-
-
-
-
-
-/* 고정배차 */
-.fixedDispatch {
+.groupCreate {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 10rem;
+  height: 14rem;
   box-sizing: border-box;
   background-color: white;
   border-radius: 0.2rem;
   box-shadow: 0.1rem 0.1rem 0.6rem rgba(0, 0, 0, 0.3);
 }
 
-.fixedDispatchHeader {
+.groupCreateHead {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   width: 100%;
-  height: 4.2rem;
-  padding: 0 1rem;
+  height: 3.6rem;
+  padding-left: 1rem;
+  background-color: #444;
   box-sizing: border-box;
-  font-size: 1.6rem;
-}
-
-.fixedDispatchHeaderBtnBox {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 14rem;
-}
-
-.fixedDispatchSave {
-  background-color: #0069D9;
-}
-
-.fixedDispatchDelete {
-  background-color: #444;
-}
-
-.fixedDispatchTable {
-  width: 100%;
-  border-spacing: 0;
-}
-
-.fixedDispatchTable thead {
-  background-color: #444;
-}
-
-.fixedDispatchTable tr {
-  height: 3rem;
-}
-
-.fixedDispatchTable td {
-  width: calc(100% / 7);
-  text-align: center;
   font-size: 1.4rem;
   color: white;
+  border-radius: 0.2rem 0.2rem 0 0;
 }
 
-.fixedDispatchTable tbody td {
-  color: black;
-  border-right: 0.1rem solid black;
+.groupCreateBody {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 100%;
+  height: calc(100% - 3.6rem);
+  padding: 1rem;
+  box-sizing: border-box;
 }
 
-.fixedDispatchTable tbody td:nth-last-child(1) {
-  border-right: none;
-}
-
-.fixedDispatchBox {
+.groupCreateInput {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-}
-
-.fixedDispatchSelect {
-  display: none;
-  width: 58%;
-  height: 2.4rem;
-  margin-right: 1%;
-  outline: none;
-}
-
-.fixedDispatchSelect option{
-  color: black;
-}
-
-.fixedDispatchText {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   width: 100%;
   height: 2.8rem;
+}
+
+.groupCreateInput input {
+  height: 100%;
+  padding-left: 0.6rem;
+  border: 0.1rem solid #CDCDCE;
+  border-radius: 0.2rem;
+  outline: none;
   box-sizing: border-box;
-  cursor: pointer;
-}
-.disableToFixedDispatch{
-  background-color: rgb(173, 173, 173);
-  pointer-events: none;
 }
 
-
-
-
-
-
-/* 스케줄 */
-.mainSchedule {
-  width: 100%;
-  height: calc(100% - 30.2rem);
+.groupNumCreate {
+  width: 6.2rem;
 }
 
-.scheduleHeaderArea {
-  justify-content: space-between;
-  height: 4.2rem;
-  padding: 0 1rem;
-  box-sizing: border-box;
-  font-size: 1.6rem;
+.groupNameCreate {
+  width: calc(100% - 7.2rem);
 }
 
-.scheduleHeaderFilterBox {
+.groupCreateBtnBox {
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  width: 100%;
 }
 
-.scheduleHeaderFilterBox input {
-  cursor: pointer;
+.groupCreateBtnBox a{
+  margin-right: auto;
 }
 
-.scheduleHeaderFilterBox label {
-  margin-right: 1rem;
-  cursor: pointer;
-}
-
-.scheduleHeaderFilter {
-  width: 14rem;
-  height: 1.8rem;
-}
-
-.hourMarker {
-  width: 109.44rem;
-}
-
-.scheduleTableTrAble {
-  order: 1;
-}
-
-.scheduleTableTrDisable {
-  order: 2;
-}
-
-.hourTd {
-  width: 9.12rem;
-}
-
-.scheduleBodyArea {
-  height: calc(100% - 4.2rem);
-  padding-left: 1rem;
-}
-
-.driverTd {
-  width: calc(100% - 109.44rem);
-}
-
-.ableToDispatch{
+.groupCreateNew {
   background-color: #0069D9;
 }
 
-.scheduleTableScroll{
-  width: calc(100% - 1rem);
+.groupCreateSave {
+  background-color: #0069D9;
+  margin-right: 1rem;
+}
+
+.groupCreateDelete {
+  background-color: #444;
+}
+
+
+
+
+/* 그룹 접기 */
+.foldGroup {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  width: 6rem;
+  height: 100%;
+  background-color: white;
+  border-radius: 0 0.2rem 0.2rem 0;
+  box-shadow: 0.1rem 0.1rem 0.6rem rgba(0, 0, 0, 0.3);
+}
+
+.foldGroup svg {
+  cursor: pointer;
+}
+
+
+
+
+
+
+
+
+.mainLayout {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: calc(100% - 38rem);
+  height: 100%;
+}
+
+
+/* 노선등록 */
+.routeInput {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 15.9rem;
+  box-sizing: border-box;
+  background-color: white;
+  border-radius: 0.2rem;
+  box-shadow: 0.1rem 0.1rem 0.6rem rgba(0, 0, 0, 0.3);
+}
+
+.routeInputHead {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 3.6rem;
+  padding: 0 1rem;
+  box-sizing: border-box;
+}
+
+.routeInputHead span {
+  font-size: 1.4rem;
+}
+
+.routeInputBtnBox {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 21.5rem;
+}
+
+.routeInputNew {
+  background-color: #0069D9;
+}
+
+.routeInputSave {
+  background-color: #0069D9;
+}
+
+.routeInputDelete {
+  background-color: #444;
+}
+
+.dispatcTable {
+  width: 100%;
+  height: 12.3rem;
+  table-layout: fixed;
+}
+
+.dispatcTable tr {
+  width: 100%;
+  height: 3.1rem;
+  box-sizing: border-box;
+}
+.dispatcTable tr:nth-child(1) td:nth-child(2),
+.dispatcTable tr:nth-child(1) td:nth-child(4),
+.dispatcTable tr:nth-child(1) td:nth-child(6){
+  border-top: 0.1rem solid #CDCDCE;
+}
+
+.dispatcTable td {
+  padding: 0;
+  font-size: 1.4rem;
+  border-bottom: 0.1rem solid #CDCDCE;
+}
+
+.tdTypeA {
+  text-align: center;
+  background-color: #444;
+  color: white;
+  font-size: 1.4rem;
+  width: 7%;
+}
+
+.tdTypeB {
+  width: 43%;
+  font-size: 1.4rem;
+}
+
+.tdTypeC {
+  width: 18%;
+  font-size: 1.4rem;
+}
+
+.routeWeek,
+.routeNumber,
+.routeTime{
+  display: flex;
+}
+
+.inputSelect {
+  width: calc(100% - 1.6rem);
+  height: 2.4rem;
+  margin: 0 0.8rem;
+  outline: none;
+}
+
+
+
+
+
+
+/* 노선목록 검색 */
+.routListSearch {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  height: 3.6rem;
+  padding: 0 1rem;
+  box-sizing: border-box;
+  background-color: white;
+  border-radius: 0.2rem;
+  box-shadow: 0.1rem 0.1rem 0.6rem rgba(0, 0, 0, 0.3);
+}
+
+.routListSearch label {
+  font-size: 1.4rem;
+}
+
+#routeListsearch {
+  width: 36rem;
+  height: 2.6rem;
+  margin: 0 2rem;
+  border: 0.1rem solid #CDCDCE;
+  border-radius: 0.2rem;
+  outline: none;
+  box-sizing: border-box;
+}
+
+.routeListSearchBtn {
+  background-color: #444;
+}
+
+
+
+
+
+/* 노선목록 */
+.RouteList {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+  height: calc(100% - 22.5rem);
+  box-sizing: border-box;
+  background-color: white;
+  border-radius: 0.2rem;
+  box-shadow: 0.1rem 0.1rem 0.6rem rgba(0, 0, 0, 0.3);
+}
+
+.RouteList table td {
+  text-align: center;
+  box-sizing: border-box;
+}
+
+.RouteList table td:nth-child(1) {
+  width: 4%;
+}
+
+.RouteList table td:nth-child(2),
+.RouteList table td:nth-child(9) {
+  width: 26%;
+}
+
+.RouteList table td:nth-child(3),
+.RouteList table td:nth-child(5) {
+  width: 8%;
+}
+
+.RouteList table td:nth-child(4) {
+  width: 6%;
+}
+
+.RouteList table td:nth-child(6) {
+  width: 10%;
+}
+
+.RouteList table td:nth-child(7),
+.RouteList table td:nth-child(8) {
+  width: 6%;
+}
+
+.RouteListHeader {
+  width: calc(100% - 0.6rem);
+  height: 3.6rem;
+}
+
+.RouteListHeader tr {
+  background-color: #444;
+  color: white;
+  font-size: 1.4rem;
+}
+
+.RouteListScroll {
+  width: 100%;
+  height: calc(100% - 3.6rem);
+  overflow-y: scroll;
+}
+
+.RouteListScroll::-webkit-scrollbar {
+  width: 0.6rem;
+}
+
+.RouteListScroll::-webkit-scrollbar-thumb {
+  height: 17%;
+  background-color: #444444;
+  border-radius: 1rem;
+}
+
+.RouteListScroll::-webkit-scrollbar-track {
+  background-color: #D2D2D2;
+}
+
+.RouteListBody {
+  width: 100%;
+  height: 100%;
+}
+
+.RouteListBodyTr {
+  width: 100%;
+  height: 3.6rem;
+}
+
+.RouteListBodyTr:hover{
+  background-color: #CDCDCE;
+}
+.RouteListBodyTr:hover td{
+  border-right: 0.1rem solid white;
+  border-bottom: 0.1rem solid white;
+}
+
+.RouteListBody td {
+  font-size: 1.2rem;
+  border-right: 0.1rem solid #CDCDCE;
+  border-bottom: 0.1rem solid #CDCDCE;
+}
+
+.RouteListBody td:nth-child(2),
+.RouteListBody td:nth-child(6),
+.RouteListBody td:nth-child(9){
+  text-align: left;
+  padding-left: 1rem;
+}
+
+.blanckTr{
+  width: 100%;
+  height: 100%;
 }
