--- a/static/css/document/company.css
+++ b/static/css/document/company.css
@@ -53,7 +53,7 @@
     background-color: #444444;
 }
 
-.upload {
+.download {
     top: -6.5rem;
     right: 9.5rem;
     position: absolute;
@@ -160,22 +160,19 @@
 }
 
 .documentContentsTable thead td:nth-child(2) {
-    text-align: center;
-    font-size: 2.4rem;
-    font-weight: bold;
-    width: 3%;
-    cursor: pointer;
-}
-
-.documentContentsTable thead td:nth-child(3) {
     text-align: left;
-    padding-left: 1rem;
     width: 94%;
+    padding-left: 1rem;
     box-sizing: border-box;
+    line-height: -0.6rem;
 }
 
-.documentContentsTable tbody {
+.documentContentsTableTbody {
     display: none;
+}
+
+.openFolder {
+    display: table-row-group;
 }
 
 .documentContentsTable tbody tr {
@@ -197,8 +194,8 @@
 
 .documentContentsTable tbody td:nth-child(2) {
     text-align: left;
-    padding-left: 1rem;
-    width: 80%;
+    padding-left: 4rem;
+    width: 77%;
     box-sizing: border-box;
 }
 
